# styx

./: .env.example  .gitignore  ARCHITECTURE.md  BOUNTY.md  Cargo.toml  README.md
agent/: Cargo.toml  README.md
agent/src/: baseline.rs  claude.rs  execute.rs  lib.rs
core/: Cargo.toml  README.md
core/src/: auction.rs  bid.rs  compose.rs  compute_bid.rs  config.rs  failure.rs  jito_client.rs  jupiter.rs  lane_router.rs  leader.rs  lib.rs  lifecycle.rs  pumpfun_snipe.rs  retry.rs
demo/: Cargo.toml  README.md
demo/src/: log_bridge.rs  main.rs
docs/: LIFECYCLE.md  SDK.md  SETUP.md  TIP_FORMULA.md
ingest/: Cargo.toml  README.md
ingest/src/: bus.rs  lib.rs  pumpfun.rs  subscriber.rs  tip_stream.rs
styx/: Cargo.toml  README.md
styx/src/: lib.rs
ui/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css  ui_config.toml
ui/src/: api.rs  app.rs  main.rs  utils.rs
ui/src/components/: mod.rs  result_modal.rs
ui/src/components/ui/: card.rs  mod.rs
ui/src/pages/: bundle.rs  deposit.rs  execute.rs  landing.rs  log.rs  mod.rs  network.rs  snipe.rs
ui/style/: tailwind.css
