[workspace]
members = [
    "ingest",
    "core",
    "agent",
    "styx",
    "demo",
]
exclude = ["ui"]

resolver = "2"


[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
bincode = "1"
bs58 = "0.5"
dotenv = "0.15.0"
futures = "0.3.32"
jito-sdk-rust = "0.3.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde   = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

solana-rpc-client = "4.0.0"
solana-sdk = "4.0.1"
solana-compute-budget-interface = "3.0.0"
solana-commitment-config = "3.1.1"
solana-system-interface = "3.1"
jup-ag-sdk = "1.0.6"

rustls = { version = "0.23", features = ["ring"] }
thiserror = "2.0.18"
tonic = { version = "0.14", features = ["tls-webpki-roots", "tls-native-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio =  { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yellowstone-grpc-client = "13.1.1"
yellowstone-grpc-proto = "12.4.0"
tw_merge = { version = "0.1.21", features = ["variant"] }
icons = { version = "0.18.3", features = ["leptos"] }
leptos_ui = "0.3.22"

