[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
styx_core   = { package = "core",   path = "../core" }
styx_ingest = { package = "ingest", path = "../ingest" }
reqwest    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }

solana-sdk                       = { workspace = true }
solana-rpc-client                = { workspace = true }
solana-commitment-config         = { workspace = true }
solana-compute-budget-interface  = { workspace = true }
