[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Public SDK — the same dependency any user of Styx would add.
styx                            = { path = "../styx" }
# Internal crates — the demo harness needs types not in the public SDK surface.
styx_core                       = { package = "core",   path = "../core" }
styx_agent                      = { package = "agent",  path = "../agent" }
styx_ingest                     = { package = "ingest", path = "../ingest" }

axum                            = { workspace = true }
tokio                           = { workspace = true }
serde                           = { workspace = true }
serde_json                      = { workspace = true }
base64                          = { workspace = true }
solana-sdk                      = { workspace = true }
solana-rpc-client               = { workspace = true }
solana-rpc-client-api           = "4.0.0"
solana-transaction-status-client-types = "4.0.0"
solana-commitment-config        = { workspace = true }
solana-system-interface         = { workspace = true }
tracing                         = { workspace = true }
tracing-subscriber              = { workspace = true }
anyhow                          = { workspace = true }
rustls                          = { workspace = true }
tower-http                      = { workspace = true }
