[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto  = { workspace = true }
tonic = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
bs58         = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
