[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[package.metadata.leptos]
tailwind-input-file = "style/tailwind.css"

[dependencies]
leptos = { version = "0.8.20", features = ["csr"] }
leptos_router = "0.8.14"
gloo-net = { version = "0.7", features = ["http", "websocket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"          # spawn_local — run async tasks in the browser
futures = { version = "0.3", default-features = false, features = ["std"] }  # StreamExt for WebSocket reading
gloo-timers = { version = "0.3", features = ["futures"] }  # async sleep for WebSocket reconnect backoff
web-sys = { version = "0.3", features = ["Window", "Navigator", "Location", "Clipboard", "console"] }
# These can't use workspace = true because ui/ is excluded from the workspace
tw_merge  = { version = "0.1.21", features = ["variant"] }
icons     = { version = "0.18.3", features = ["leptos"] }
leptos_ui = "0.3.22"
